feat: add major improvements 2