@@ -8,7 +8,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/tasks")
@@ -24,17 +23,13 @@ public class TaskController {
         this.mapper = mapper;
     }
 
-    /**
-     * Obtener tareas de un curso (anuncios)
-     * GET /api/tasks/course/{courseId}
-     */
     @GetMapping("/course/{courseId}")
     public ResponseEntity<List<TaskResponse>> getCourseTasks(@PathVariable Long courseId) {
         List<Task> tasks = getCourseTasksUseCase.execute(courseId);
 
         List<TaskResponse> response = tasks.stream()
                 .map(mapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(response);
     }
